# quick-pose

./: .gitignore  archives.html  authors.html  categories.html  figure.html  index.html  multi-figure.html  pelicanconf.py  publishconf.py  pyproject.toml  rules.md  sculpture.html  still-life.html  tasks.py
.github/workflows/: cicd.yml  refresh_yadisk_listings.yml
category/: figure.html  multi-figure.html  sculpture.html  still-life.html
plugins/quick_poser/: lightbox_generator.py  pinscrape_lightbox_generator.py  yadisk_lightbox_generator.py
quick_pose/: image_converter.py  yadisk_listings_refresher.py
templates/: lightbox.html
